[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/gdtrees/UI/Widgets/InputSlider.gd" type="Script" id=1]
[ext_resource path="res://addons/gdtrees/UI/Widgets/ProgressInput.tscn" type="PackedScene" id=2]

[node name="InputSlider" type="HBoxContainer"]
margin_right = 213.0
margin_bottom = 24.0
alignment = 2
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 104.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProgressInput" parent="." instance=ExtResource( 2 )]
margin_left = 108.0
margin_right = 213.0
margin_bottom = 24.0
max_value = 10.0
step = 1.0

[connection signal="value_changed" from="ProgressInput" to="." method="_on_ProgressInput_value_changed"]
